# task_manager

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  basic_auth.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  run.py  utils.py  views.py
app/: app.py  auth.py  basic_auth.py  logic.py  projects.py  tasks.py  utils.py
config/: config.py  custom_logger.py  log_config.yaml
error_handlers/: error_handlers.py
logic/: auth_logic.py  comments_logic.py  projects_logic.py  tasks_logic.py
migrations/: env.py
migrations/versions/: 4118c20b4448_изменение_таблиц_project_task.py  60aef39934cd_first_migration.py  8e77a3d255fe_second_migration.py  9ceae42b48f4_увеличение_длины_поля_password_до_256_.py  9cebb003a9e1_записываем_статусы_в_таблицу_status.py  ad668636318a_third_migration.py
routes/: auth.py  comments.py  projects.py  tasks.py
schemas/: validation_schemas.py
templates/: index.html
tests/: test.py
