[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = "Это веб-приложение на Flask предназначено для управления проектами и задачами. Оно использует SQLAlchemy для работы с базой данных PostgreSQL. Основной файл приложения настраивает объект Flask и инициализирует подключение к базе данных. В приложении реализованы маршруты для аутентификации пользователей, управления проектами и управления задачами. При обращении к корневому маршруту возвращается статус 200, что позволяет проверить работоспособность приложения. В коде также есть обработчики ошибок. Приложение легко масштабируется благодаря использованию blueprint'ов для организации кода по функциональности. Оно запускается в режиме отладки для удобства разработки."
authors = ["madiyar_9802 <madiarashkenovm@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
requests = "^2.32.3"
pydantic = {extras = ["email"], version = "^2.7.3"}
flask-sqlalchemy = "^3.1.1"
email-validator = "^2.1.1"
alembic= "^1.13.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
